Demeteorize medium and large product generation

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
             "./"
           ],
           "alias": {
+            "@reactioncommerce/api-utils": "./imports/utils",
             "@reactioncommerce/reaction-collections": "./imports/plugins/core/collections",
             "@reactioncommerce/reaction-components": "./imports/plugins/core/components/lib",
             "@reactioncommerce/reaction-router": "./imports/plugins/core/router/lib",
